// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Controllers with buttons disabled without crashing 1`] = `
Array [
  <button
    className="btn controls-btn_back"
    disabled={true}
    onClick={[Function]}
    title="Step back"
    type="button"
  >
    back (
    2
    )
  </button>,
  <button
    className="btn controls-btn_restart"
    disabled={true}
    onClick={[Function]}
    title="Restart the game"
    type="button"
  >
    restart
  </button>,
]
`;

exports[`should render Controllers with buttons enabled without crashing 1`] = `
Array [
  <button
    className="btn controls-btn_back"
    disabled={true}
    onClick={[Function]}
    title="Step back"
    type="button"
  >
    back (
    0
    )
  </button>,
  <button
    className="btn controls-btn_restart"
    disabled={false}
    onClick={[Function]}
    title="Restart the game"
    type="button"
  >
    restart
  </button>,
]
`;

exports[`should render Controllers with rollback button disabled when rollback is 0 1`] = `
<button
  className="btn controls-btn_back"
  disabled={true}
  onClick={[Function]}
  title="Step back"
  type="button"
>
  back (
  0
  )
</button>
`;
